# portal-app-backend

./: .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/app/: init_data.yaml  load_data.py  main.py
backend/app/api/: deps.py
backend/app/core/: config.py
backend/app/domains/entities/: __init__.py  login_token.py  user.py
backend/app/drivers/: security.py  sqlalchemy_to_pydantic.py
backend/app/drivers/database/: database.py  init_db.py
backend/app/drivers/database/migrations/: env.py
backend/app/drivers/database/models/: __init__.py  user.py
backend/app/interfaces/: __init__.py  user.py
backend/app/repositories/: __init__.py  user.py
backend/app/usecases/: __init__.py  user.py
backend/migration/: env.py
backend/migration/versions/: 775ef88d3b05_migration_comment.py  c30526b622a8_migration_comment.py
